# service/server.go
@@ -7,6 +7,7 @@ import (
 	"time"
 	"timezone/pb/pb"
 
+	"github.com/bradfitz/latlong"
 	"github.com/ip2location/ip2location-go/v9"
 	"google.golang.org/grpc/metadata"
 )
@@ -23,44 +24,32 @@ func (s *Server) TimeZoneDetails(ctx context.Context, req *pb.TimeZoneRequest) (
 	// p, _ := peer.FromContext(ctx)
 	// ipaddress := p.Addr.String()
 	// fmt.Println(ipaddress)
-	var client_ip []string
-	var forwarded []string
-	var ipaddress string
-	if md, ok := metadata.FromIncomingContext(ctx); ok {
-		client_ip = md.Get("client-ip")
-		forwarded = md.Get("x-forwarded-for")
-	}
-	if len(forwarded) != 0 {
-		ipaddress = strings.Split(forwarded[0], ",")[0]
-	} else {
-		ipaddress = client_ip[0]
-	}
-	fmt.Println(ipaddress)
 	db, err := ip2location.OpenDB("service/IP2LOCATION-LITE-DB11.BIN")
 	if err != nil {
 		return &pb.TimeZoneResponse{}, err
 	}
-	fmt.Println("hi")
+	var client_ip []string
+	var forwarded []string
+	ipaddress:=req.Ipaddress
+	if ipaddress == ""{
+		if md, ok := metadata.FromIncomingContext(ctx); ok {
+			client_ip = md.Get("client-ip")
+			forwarded = md.Get("x-forwarded-for")
+		}
+		if len(forwarded) != 0 {
+			ipaddress = strings.Split(forwarded[0], ",")[0]
+		} else {
+			ipaddress = client_ip[0]
+		}
+	}
+	fmt.Println(ipaddress)
 	results, err := db.Get_all(ipaddress)
 	if err != nil {
 		fmt.Println(err)
 	}
-	fmt.Println("hi")
-	// latitude := results.Latitude
-	// longitude := results.Longitude
-	timezone := results.Timezone
-	fmt.Println(results.Region)
-	fmt.Println(results.City)
-	fmt.Println(results.Country_short)
-	fmt.Println(results.Country_long)
-	fmt.Println(timezone)
 	db.Close()
-	// latitude := req.GetLatitude()
-	// fmt.Println(latitude)
-	// longitude := req.GetLongitude()
-	// fmt.Println(longitude)
 	currentTime := req.GetTime()
-	//timezone := latlong.LookupZoneName(float64(latitude), float64(longitude))
+	timezone := latlong.LookupZoneName(float64(results.Latitude), float64(results.Longitude))
 	if err := setTimezone(timezone); err != nil {
 		return &pb.TimeZoneResponse{}, err // most likely timezone not loaded in Docker OS
 	}
@@ -84,7 +73,7 @@ func (s *Server) TimeZoneDetails(ctx context.Context, req *pb.TimeZoneRequest) (
 		u := strings.Split(a, "-")
 		utc = fmt.Sprintf("UTC-%v", u[len(u)-1])
 	}
-	return &pb.TimeZoneResponse{UtcOffset: utc, ZoneName: timezone, TimeInThatZone: t.Format(time.RFC3339)}, nil
+	return &pb.TimeZoneResponse{UtcOffset: utc, ZoneName: timezone, TimeInThatZone: t.Format(time.RFC3339), Region: results.Region, City: results.City, Country: results.Country_long, Latitude: float64(results.Latitude), Longitude: float64(results.Longitude)}, nil
 }
 
 var loc *time.Location
